--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </div>
       <form class="navbar-form navbar-right" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input id="search-txt" type="text" class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">
+        <button id="search-btn" type="submit" class="btn btn-default">
           <i class="fa fa-search fa-flip-horizontal fa-2x" aria-hidden="true"></i>
         </button>
       </form>
