--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         </button>
       </form>
     </div>
+    <div id="col-header" class="row">
+      <div class="col-xs-1 col-xs-offset-2">Song</div>
+      <div class="col-xs-1 col-xs-offset-3">Artist</div>
+      <div class="col-xs-1 col-xs-offset-1">Album</div>
+      <div class="col-xs-1 col-xs-offset-1">Popularity</div>
+    </div>
   </header>
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
