--- a/index.html
+++ b/index.html
@@ -29,13 +29,23 @@
       </form>
     </div>
     <div id="col-header" class="row">
-      <div class="col-xs-1 col-xs-offset-2">Song</div>
-      <div class="col-xs-1 col-xs-offset-3">Artist</div>
-      <div class="col-xs-1 col-xs-offset-1">Album</div>
-      <div class="col-xs-1 col-xs-offset-1">Popularity</div>
+      <div class="col-xs-3 col-xs-offset-2">Song</div>
+      <div class="col-xs-2 col-xs-offset-1">Artist</div>
+      <div class="col-xs-2">Album</div>
+      <div class="col-xs-1 popularity">Popularity</div>
     </div>
   </header>
-
+  <div id="track-list" class="container-fluid">
+    <div id="track" class="row">
+      <div class="col-xs-1 col-xs-offset-1">
+        <a href="https://youtu.be/eI_O5_tJ1hA" target="_blank"><i class="fa fa-play-circle-o fa-2x" aria-hidden="true"></i></a>
+      </div>
+      <div class="col-xs-3">Fairytale in the Supermarket</div>
+      <div class="col-xs-2 col-xs-offset-1">The Raincoats</div>
+      <div class="col-xs-2">The Raincoats</div>
+      <div class="col-xs-1 popularity">101,839</div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   <script type="text/javascript" src="./resources/js/trackster.js"></script>
   <script type="text/javascript" src="./resources/js/tests.js"></script>
