--- a/index.html
+++ b/index.html
@@ -28,16 +28,29 @@
         </button>
       </form>
     </div>
-    <div id="col-header" class="row">
-      <div class="col-xs-3 col-xs-offset-2">Song</div>
-      <div class="col-xs-2 col-xs-offset-1">Artist</div>
-      <div class="col-xs-2">Album</div>
-      <div class="col-xs-1 popularity">Popularity</div>
+    <div id="col-header-desktop" class="container-fluid">
+      <div class="row">
+        <div class="col-xs-1 col-xs-offset-1"></div>
+        <div class="col-xs-4">Song</div>
+        <div class="col-xs-2">Artist</div>
+        <div class="col-xs-2">Album</div>
+        <div class="col-xs-1 popularity">Popularity</div>
+      </div>
+    </div>
+    <div id="col-header-mobile" class="container-fluid">
+      <div class="row">
+        <div class="col-xs-1 col-xs-offset-1"></div>
+        <div class="col-xs-4">Song</div>
+        <div class="col-xs-2">Art.</div>
+        <div class="col-xs-2">Alb.</div>
+        <div class="col-xs-1 popularity">Pop.</div>
+      </div>
     </div>
   </header>
   <div id="track-list" class="container-fluid">
   </div>
   <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/numeral.js/2.0.6/numeral.min.js"></script>
   <script type="text/javascript" src="./resources/js/trackster.js"></script>
   <script type="text/javascript" src="./resources/js/tests.js"></script>
 </body>
