Add column sort functionality.

--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
     <div id="col-header-desktop" class="container-fluid">
       <div class="row">
         <div class="col-xs-1 col-xs-offset-1"></div>
-        <div class="col-xs-4">Song</div>
-        <div class="col-xs-2">Artist</div>
+        <div class="col-xs-3 sortable">Song <i class="fa fa-sort hideable" aria-hidden="true"></i></div>
+        <div class="col-xs-2 sortable">Artist <i class="fa fa-sort" aria-hidden="true"></i></div>
         <div class="col-xs-2">Album</div>
-        <div class="col-xs-1 popularity">Popularity</div>
+        <div class="col-xs-2 sortable">Popularity <i class="fa fa-sort" aria-hidden="true"></i></div>
       </div>
     </div>
     <div id="col-header-mobile" class="container-fluid">
       <div class="row">
         <div class="col-xs-1 col-xs-offset-1"></div>
-        <div class="col-xs-4">Song</div>
-        <div class="col-xs-2">Art.</div>
+        <div class="col-xs-3 sortable">Song <i class="fa fa-sort hideable" aria-hidden="true"></i></div>
+        <div class="col-xs-2 sortable">Art. <i class="fa fa-sort" aria-hidden="true"></i></div>
         <div class="col-xs-2">Alb.</div>
-        <div class="col-xs-1 popularity">Pop.</div>
+        <div class="col-xs-2 sortable">Pop. <i class="fa fa-sort" aria-hidden="true"></i></div>
       </div>
     </div>
   </header>
